@@ -37,12 +37,14 @@ module ExcelFunctions
   def index_for_whole_row(array,row_number)
     return :ref if row_number < 1
     return :ref if row_number > array.length
+    return index_for_row_column(array, row_number, 1) if array.first.length == 1
     [array[row_number-1]]
   end
   
   def index_for_whole_column(array,column_number)
     return :ref if column_number < 1
     return :ref if column_number > array[0].length
+    return index_for_row_column(array, 1, column_number) if array.length == 1
     array.map { |row| [row[column_number-1]]}
   end
 end
