@@ -1,5 +1,6 @@
 # Head
 
+- Fixed INDEX when passed zero as a row or column number when only one row or column wide
 - Implemented the ISERR() function in ruby and in C
 
 # 0.2.28 - 2014 June 16th
